<resources>
    <string name="app_name">今日反馈</string>
    <string name="name_test">兰世儒</string>
    <string name="stu_card">学号</string>

    <string name="email_illegacity">邮箱地址非法</string>
    <string name="common_description">通用图片按钮</string>
    <string name="tel_null">请输入电话号码</string>
    <string name="error_tel">电话号码不正确</string>
    <string name="modify_tel">修改电话</string>
    <string name="all_feedback">全部反馈</string>
    <string name="notice">通知</string>
    <string name="feedback_my">反馈我的</string>
    <string name="empty_tv">当前页没有任何数据</string>

    <string name="important_notice_title">重要通知</string>
    <string name="notice_time">通知时间：</string>
    <string name="please_input_content">请输入内容</string>
    <string name="please_choose_depart">请选择部门</string>
    <string name="please_choose_person">请选责任人</string>
    <string name="save">保存</string>
    <string name="let_txt">让</string>
    <string name="feedback_txt">反馈</string>
    <string name="modify_txt">整改</string>
    <string name="my_school">办一所科技融入教育的大学</string>
    <string name="xun1_txt">信息采集自动化</string>
    <string name="xun2_txt">校园管理信息化</string>
    <string name="xun3_txt">教育资源均等化</string>
    <string name="xun4_txt">家教互动平台化</string>
</resources>
